--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Proyecto Completo</title>
+  <title>Proyecto en Construcción</title>
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; max-width: 1400px; margin: auto; background-color: #f4f4f4; }
     header, footer { text-align: center; padding: 10px; background: #222; color: #fff; margin-bottom: 20px; }
