--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
   <header>
-    <h1>Proyecto en Construcción</h1>
+    <h1>Proyecto en Construcción..</h1>
   </header>
 
   <main>
@@ -105,7 +105,7 @@
     </script>
     
     <section id="tabla-clave" class="table-container">
-      <h2>Tabla de Claves Interactiva</h2>
+      <h2>Tabla de Claves Interactiva (DEPORTIVAS)</h2>
       <p style="font-size: 18px; font-weight: bold; margin-bottom: 10px;">Conversión de letras a números</p>
     
       <table style="margin: 0 auto; max-width: 600px; background: #fff; border-radius: 8px; overflow: hidden;">
